gitea-sqlite-k8s/03-network.yaml
###############################
# Service
###############################
---
kind: Service
apiVersion: v1
metadata:
  name: gitea-service
  namespace: gitea-git
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 80
    targetPort: 3000
  - name: gitea-ssh
    port: 22
    targetPort: 22

---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea-ingress
  namespace: gitea-git
spec:
  rules:
  - host: gitea.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-service
            port:
              number: 80
